--- a/src/dotless.Test/dotless.Test.csproj
+++ b/src/dotless.Test/dotless.Test.csproj
@@ -152,7 +152,6 @@
     <Compile Include="Specs\StringsFixture.cs" />
     <Compile Include="Specs\RulesetsFixture.cs" />
     <Compile Include="Specs\WhitespaceFixture.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Config\ConfigurationFixture.cs" />
     <Compile Include="HttpFixtureBase.cs" />
     <Compile Include="Unit\Response\CssResponseFixture.cs" />
@@ -192,6 +191,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resource\Embedded2.less" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
